<resources>
    <string name="app_name">Weathering</string>
    <string name="hello">Weathering</string>
    <string-array name="lang">
        <item>English</item>
        <item>Russian</item>
        <item>Ukrainian</item>
    </string-array>

    <string-array name="lang_name">
        <item>en</item>
        <item>ru</item>
        <item>ua</item>
    </string-array>

    <string-array name="city_name">
        <item>Киев</item>
        <item>Львов</item>
        <item>Сумы</item>
        <item>Харьков</item>
        <item>Донецк</item>
        <item>АР Крым</item>
        <item>Днипро</item>
    </string-array>

    <string-array name="city">
        <item>Kyiv</item>
        <item>Lviv</item>
        <item>Sumy</item>
        <item>Kharkiv</item>
        <item>Donetsk</item>
        <item>Crimia</item>
        <item>Dnipro</item>
    </string-array>
    <string-array name="units_name">
        <item>Цельсий</item>
        <item>Кельвин</item>
        <item>Фарингейт</item>
    </string-array>

    <string-array name="units">
        <item>metric</item>
        <item>default</item>
        <item>imperial</item>

    </string-array>

    <string name="action_settings">Settings</string>
    <string name="wind">Скорость ветра: </string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>
    <string name="tomorrow">Завтра</string>
    <string name="humidity">Влажность: </string>
    <string name="cloud">Облачность: </string>
    <string name="rain">Вероятность осадков:</string>
    <string name="pressure">Атмосферное давление:</string>
    <string name="night_temp">Температура ночью:</string>
    <string name="morn_night">Температура утром:</string>

    <string name="pressure_unit"> мм. рт. ст</string>
    <string name="percent_unit"> %</string>
    <string name="wind_unit"> м/с</string>

    <string name="default_city">Киев</string>


</resources>
